visibility样式优化 + 'seconds'等字符串抽成常量 + resolve一个本地时间（含假误差）

--- a/src/components/Clock/Clock.less
+++ b/src/components/Clock/Clock.less
@@ -21,6 +21,7 @@
         top: @length;
         right: @length;
         width: @length;
+        visibility: hidden;
         height: @length;
         line-height: @length;
         text-align: center;
@@ -33,7 +34,7 @@
         }
     }
     &:hover .delete-icon {
-        visibility: visible !important;
+        visibility: visible;
     }
     .date {
         margin: 30px 0;
